--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,9 @@
 .inner {
   max-width: 10%;
 }
+
+.page-header {
+  color: #ffff;
+  background-color: #A067AB;
+  background-image: linear-gradient(120deg, #5073B8, #A067AB);
+}
