--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,12 @@
 @import "{{ site.theme }}";
 
 .main-content {
-  max-width: 10%;
+  max-width: 90%;
+}
+
+
+.page-header {
+  color: #ffff;
+  background-color: #A067AB;
+  background-image: linear-gradient(120deg, #5073B8, #A067AB);
 }
