--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 .main-content {
-  max-width: 75%;
+  max-width: 100%;
 }
 
 
@@ -12,4 +12,10 @@
   color: #ffff;
   background-color: #A067AB;
   background-image: linear-gradient(120deg, #5073B8, #A067AB);
+}
+
+
+h1, h2, h3, h4, h5, h6
+{
+    color: #A067AB;
 }
