--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 .main-content {
-  max-width: 100%;
+  max-width: 75%;
 }
 
 
@@ -15,7 +15,8 @@
 }
 
 
-h1, h2, h3, h4, h5, h6
+/* h1, h2, h3, h4, h5, h6
 {
     color: #A067AB;
 }
+ */
