--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,16 @@
 
 @import "{{ site.theme }}";
 
-.main-content {
-  max-width: 75%;
-}
-
-
 .page-header {
   color: #ffff;
   background-color: #A067AB;
   background-image: linear-gradient(120deg, #5073B8, #A067AB);
 }
 
-
-/* h1, h2, h3, h4, h5, h6
-{
+.main-content {
+  max-width: 75%;
+  h1, h2, h3, h4, h5, h6
+  {
     color: #A067AB;
+  }
 }
- */
