--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,33 @@
 
 .main-content {
   max-width: 75%;
-  h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
+}
+
+h1
   {
     color: #000000;
   }
-}
+
+
+h2
+  {
+    color: #000000;
+  }
+
+
+h3
+  {
+    color: #000000;
+  }
+
+
+h4
+  {
+    color: #000000;
+  }
+
+
+h5
+  {
+    color: #000000;
+  }
