--- a/css/style.css
+++ b/css/style.css
@@ -15,30 +15,30 @@
   
 h1
   {
-    color: #000000;
+    color: #000000 !important;
   }
 
 
 h2
   {
-    color: #000000;
+    color: #000000 !important;
   }
 
 
 h3
   {
-    color: #000000;
+    color: #000000 !important;
   }
 
 
 h4
   {
-    color: #000000;
+    color: #000000 !important;
   }
 
 
 h5
   {
-    color: #000000;
+    color: #000000 !important;
   }
 }
