--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 @import "{{ site.theme }}";
 
 .page-header {
-  color: #ffff;
+/*   color: #ffff; */
+  color: #0000
   background-color: #A067AB;
   background-image: linear-gradient(120deg, #5073B8, #A067AB);
 }
@@ -15,30 +16,30 @@
   
 h1
   {
-    color: #000000 !important;
+    color: #0000 !important;
   }
 
 
 h2
   {
-    color: #000000 !important;
+    color: #0000 !important;
   }
 
 
 h3
   {
-    color: #000000 !important;
+    color: #0000 !important;
   }
 
 
 h4
   {
-    color: #000000 !important;
+    color: #0000 !important;
   }
 
 
 h5
   {
-    color: #000000 !important;
+    color: #0000 !important;
   }
 }
