--- a/css/style.css
+++ b/css/style.css
@@ -4,42 +4,11 @@
 @import "{{ site.theme }}";
 
 .page-header {
-/*   color: #ffff; */
-  color: #0000
+  color: #ffff;
   background-color: #A067AB;
   background-image: linear-gradient(120deg, #5073B8, #A067AB);
 }
 
 .main-content {
   max-width: 75%;
-  
-  
-h1
-  {
-    color: #0000 !important;
-  }
-
-
-h2
-  {
-    color: #0000 !important;
-  }
-
-
-h3
-  {
-    color: #0000 !important;
-  }
-
-
-h4
-  {
-    color: #0000 !important;
-  }
-
-
-h5
-  {
-    color: #0000 !important;
-  }
 }
