--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 ---
 ---
+$section-headings-color: #000000;
+$body-link-color: #000000;
 
 @import "{{ site.theme }}";
 
@@ -13,7 +15,7 @@
   max-width: 75%;
 }
 
-body {
+/* body {
     counter-reset: h1
 }
 
@@ -48,3 +50,4 @@ h4:before {
     counter-increment: h4;
     content: counter(h1) "." counter(h2) "." counter(h3) "." counter(h4) ". "
 }
+ */
