--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 ---
 ---
 
-$header-bg-color-secondary: #159957;
-$header-bg-color: #155799;
+$header-bg-color-secondary: #000000;
+$header-bg-color: #000000;
 @import "{{ site.theme }}";
-
+/* 
 .page-header {
   color: #ffff;
   background-color: #A067AB;
   background-image: linear-gradient(120deg, #5073B8, #A067AB);
-}
+} */
 
 .main-content {
   max-width: 75%;
