--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 ---
 ---
 
-$header-bg-color-secondary: #000000;
-$header-bg-color: #000000;
+$header-bg-color: #1e6bb8;
+$header-bg-color-secondary: #7EA7D3;
+
+$body-link-color: #7EA7D3;
+$blockquote-text-color: #819198;
+
+$code-text-color: #494D4E;
+
 @import "{{ site.theme }}";
 /* 
 .page-header {
