--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@ $code-text-color: #494D4E;
   background-image: linear-gradient(120deg, #5073B8, #A067AB);
 } */
 
-.main-content {
+/* .main-content {
   max-width: 75%;
-}
+} */
 
 /* body {
     counter-reset: h1
