--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,12 +4,8 @@
 $header-bg-color: #1e6bb8;
 $header-bg-color-secondary: #7EA7D3;
 
-$section-headings-color: #000000;
-
-$body-link-color: #7EA7D3;
-$blockquote-text-color: #819198;
-
-$code-text-color: #494D4E;
+$section-headings-color: #862633;
+$body-link-color: #00233D;
 
 @import "{{ site.theme }}";
 /* 
