--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,12 +8,12 @@ $section-headings-color: #862633;
 $body-link-color: #00233D;
 
 @import "{{ site.theme }}";
-/* 
+
 .page-header {
   color: #ffff;
-  background-color: #A067AB;
-  background-image: linear-gradient(120deg, #5073B8, #A067AB);
-} */
+  background-color: #862633;
+  background-image: linear-gradient(120deg, #82232F, #862633);
+}
 
 /* .main-content {
   max-width: 75%;
