--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,8 @@
 ---
 ---
 
-$header-bg-color: #862633;
-$header-bg-color-secondary: #82232F;
+// $header-bg-color: #862633;
+// $header-bg-color-secondary: #82232F;
 
 $section-headings-color: #862633;
 $body-link-color: #00233D;
