--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,11 +15,11 @@ $body-link-color: #00233D;
   background-image: linear-gradient(120deg, #82232F, #862633);
 }
 
-/* .main-content {
+.main-content {
   max-width: 75%;
-} */
+}
 
-/* body {
+body {
     counter-reset: h1
 }
 
@@ -54,4 +54,3 @@ h4:before {
     counter-increment: h4;
     content: counter(h1) "." counter(h2) "." counter(h3) "." counter(h4) ". "
 }
- */
