--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@ $body-link-color: #00233D;
 .page-header {
   color: #ffff;
   background-color: #862633;
-  background-image: linear-gradient(120deg, #82232F, #862633);
+  background-image: linear-gradient(120deg, #000000, #862633);
 }
 
 .main-content {
