--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,17 +35,17 @@ h3:before {
     content: counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
 }
 
-h4:before {
-    counter-increment: h4counter;
-    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) ".\0000a0\0000a0";
-}
+// h4:before {
+//     counter-increment: h4counter;
+//     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) ".\0000a0\0000a0";
+// }
 
-h5:before {
-    counter-increment: h5counter;
-    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) ".\0000a0\0000a0";
-}
+// h5:before {
+//     counter-increment: h5counter;
+//     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) ".\0000a0\0000a0";
+// }
 
-h6:before {
-    counter-increment: h6counter;
-    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) "." counter(h6counter) ".\0000a0\0000a0";
-}
+// h6:before {
+//     counter-increment: h6counter;
+//     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) "." counter(h6counter) ".\0000a0\0000a0";
+// }
