--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@ $body-link-color: #000080;
 .page-header {
   color: #ffff;
   background-color: #862633;
-  background-image: linear-gradient(120deg, #000000, #862633);
+  background-image: linear-gradient(120deg, #3F1414, #862633);
 }
 
 .main-content {
