--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 // $header-bg-color-secondary: #82232F;
 
 $section-headings-color: #862633;
-$body-link-color: #000080;
+$body-link-color: #00233D;
 
 @import "{{ site.theme }}";
 
