--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ $body-link-color: #00233D;
 
 .main-content {
   max-width: 75%;
-}
+// }
 
 h1 { counter-reset: h2counter; }
 h2 { counter-reset: h3counter; }
@@ -36,17 +36,19 @@ h3:before {
     content: counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
 }
 
-// h4:before {
-//     counter-increment: h4counter;
-//     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) ".\0000a0\0000a0";
-// }
+h4:before {
+    counter-increment: h4counter;
+    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) ".\0000a0\0000a0";
+}
 
-// h5:before {
-//     counter-increment: h5counter;
-//     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) ".\0000a0\0000a0";
-// }
+h5:before {
+    counter-increment: h5counter;
+    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) ".\0000a0\0000a0";
+}
 
-// h6:before {
-//     counter-increment: h6counter;
-//     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) "." counter(h6counter) ".\0000a0\0000a0";
-// }
+h6:before {
+    counter-increment: h6counter;
+    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) "." counter(h6counter) ".\0000a0\0000a0";
+}
+
+}
