--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@ $body-link-color: #00233D;
   max-width: 75%;
 // }
 
-// h1 { counter-reset: h2counter; }
+h1 { counter-reset: h2counter; }
 h2 { counter-reset: h3counter; }
 h3 { counter-reset: h4counter; }
 h4 { counter-reset: h5counter; }
@@ -50,5 +50,4 @@ h6:before {
     counter-increment: h6counter;
     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) "." counter(h6counter) ".\0000a0\0000a0";
 }
-
 }
