--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,57 +17,36 @@ $body-link-color: #00233D;
 
 .main-content {
   max-width: 75%;
-// }
+}
 
+h1 { counter-reset: h2counter; }
+h2 { counter-reset: h3counter; }
+h3 { counter-reset: h4counter; }
+h4 { counter-reset: h5counter; }
+h5 { counter-reset: h6counter; }
+h6 {}
 
-body {
-counter-reset : h2;
-	}
+h2:before {
+    counter-increment: h2counter;
+    content: counter(h2counter) ".\0000a0\0000a0";
+}
 
-h2 {
-counter-reset : h3;
-	}
+h3:before {
+    counter-increment: h3counter;
+    content: counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
+}
 
-h3 {
-counter-reset : h4;
-	}
+h4:before {
+    counter-increment: h4counter;
+    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) ".\0000a0\0000a0";
+}
 
-h4 {
-counter-reset : h5;
-	}
+h5:before {
+    counter-increment: h5counter;
+    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) ".\0000a0\0000a0";
+}
 
-h5 {
-counter-reset : h6;
-	}
-
-article h2:before {
-content : counter(h2,decimal) ". ";
-counter-increment : h2;
-	}
-
-article h3:before {
-content : counter(h2,decimal) "." counter(h3,decimal) ". ";
-counter-increment : h3;
-	}
-
-article h4:before {
-content : counter(h2,decimal) "." counter(h3,decimal) "." counter(h4,decimal) ". ";
-counter-increment : h4;
-	}
-
-article h5:before {
-content : counter(h2,decimal) "." counter(h3,decimal) "." counter(h4,decimal) "." counter(h5,decimal) ". ";
-counter-increment : h5;
-	}
-
-article h6:before {
-content : counter(h2,decimal) "." counter(h3,decimal) "." counter(h4,decimal) "." counter(h5,decimal) "." counter(h6,decimal) ". ";
-counter-increment : h6;
-	}
-
-h2.nocount:before, h3.nocount:before, h4.nocount:before, h5.nocount:before, h6.nocount:before {
-content : "";
-counter-increment : none;
-	}
-
+h6:before {
+    counter-increment: h6counter;
+    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) "." counter(h6counter) ".\0000a0\0000a0";
 }
