--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 // $header-bg-color-secondary: #82232F;
 
 $section-headings-color: #862633;
-$body-link-color: #1874CD;
+$body-link-color: #3B6AA0;
 
 @import "{{ site.theme }}";
 
