--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 // $header-bg-color-secondary: #82232F;
 
 $section-headings-color: #862633;
-$body-link-color: #3B6AA0;
+$body-link-color: #3A5FCD;
 
 @import "{{ site.theme }}";
 
@@ -17,18 +17,4 @@ $body-link-color: #3B6AA0;
 
 .main-content {
   max-width: 75%;
-} //if anything goes wrong uncomment this
-
-// body { counter-reset: h2counter; }
-// h2 { counter-reset: h3counter; }
-// h3 {}
-
-// h2:before {
-//     counter-increment: h2counter;
-//     content: counter(h2counter) ".\0000a0\0000a0";
-// }
-
-// h3:before {
-//     counter-increment: h3counter;
-//     content: counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
-// }
+}
